@@ -1,4 +1,4 @@
-%w(rubygems paginator fileutils pathname logger thread).each{|lib| require lib}
+%w(rubygems paginator fileutils pathname logger thread dbm).each{|lib| require lib}
 
 # Uncomment below to force Rails into production mode when
 # you don't control web/app server and can't set it the proper way
